# serializer version: 1
# name: TestMDA.test_save_persistance[False]
  [[0.4 0.3 0.5]
   [0.4 0.3 0.5]
   [0.4 0.3 0.5]
   ...
   [1.3 0.3 0.6]
   [1.3 0.4 0.6]
   [1.3 0.4 0.6]]
# ---
# name: TestMDA.test_save_persistance[True]
  [[0.4 0.3 0.5]
   [0.4 0.3 0.5]
   [0.4 0.3 0.5]
   ...
   [1.3 0.3 0.6]
   [1.3 0.4 0.6]
   [1.3 0.4 0.6]]
# ---
# name: TestMDA.test_show_multiple_selection[False]
  AttributeError("The selected attribute 'posiiton' does not exist on the mesh.")
# ---
# name: TestMDA.test_show_multiple_selection[False].1
  []
# ---
# name: TestMDA.test_show_multiple_selection[True]
  AttributeError("The selected attribute 'posiiton' does not exist on the mesh.")
# ---
# name: TestMDA.test_show_universe[False]
  []
# ---
# name: TestMDA.test_show_universe[True]
  []
# ---
# name: TestMDA.test_show_updated_atoms[False]
  [[0.4 0.3 0.5]
   [0.4 0.3 0.5]
   [0.4 0.3 0.5]
   ...
   [0.4 0.3 0.5]
   [0.4 0.3 0.5]
   [0.4 0.3 0.5]]
# ---
# name: TestMDA.test_show_updated_atoms[False].1
  [[0.4 0.3 0.5]
   [0.4 0.3 0.5]
   [0.4 0.3 0.5]
   ...
   [0.4 0.3 0.5]
   [0.4 0.3 0.5]
   [0.4 0.3 0.5]]
# ---
# name: TestMDA.test_show_updated_atoms[True]
  [[0.4 0.3 0.5]
   [0.4 0.3 0.5]
   [0.4 0.3 0.5]
   ...
   [0.4 0.3 0.5]
   [0.4 0.3 0.5]
   [0.4 0.3 0.5]]
# ---
# name: TestMDA.test_show_updated_atoms[True].1
  [[0.4 0.3 0.5]
   [0.4 0.3 0.5]
   [0.4 0.3 0.5]
   ...
   [0.4 0.3 0.5]
   [0.4 0.3 0.5]
   [0.4 0.3 0.5]]
# ---
# name: TestMDA.test_trajectory_update[False]
  [[1.2 0.3 0.8]
   [0.7 0.4 0.4]
   [1.2 0.5 0.6]
   [0.8 0.2 0.7]
   [0.5 0.3 0.4]
   [0.4 0.3 0.5]
   [0.7 0.5 0.5]
   [1.3 0.3 0.6]
   [1.1 0.7 0.6]
   [0.9 0.4 0.4]
   [1.0 0.2 0.5]
   [0.5 0.2 0.5]
   [0.8 0.3 0.5]
   [1.3 0.5 0.6]
   [0.7 0.6 0.8]
   [1.1 0.5 0.4]
   [1.2 0.4 0.8]
   [1.1 0.4 0.8]
   [0.5 0.5 0.3]
   [0.8 0.5 0.7]
   [1.3 0.3 0.7]
   [1.3 0.4 0.7]
   [0.8 0.2 0.7]
   [0.9 0.4 0.6]
   [0.6 0.4 0.3]
   [1.2 0.6 0.4]
   [0.8 0.2 0.5]
   [0.5 0.5 0.3]
   [1.0 0.3 0.4]
   [1.0 0.5 0.5]
   [0.9 0.4 0.7]
   [1.1 0.5 0.5]
   [0.6 0.5 0.4]
   [0.7 0.5 0.7]
   [1.0 0.2 0.6]
   [0.5 0.4 0.3]
   [0.6 0.3 0.5]
   [1.4 0.3 0.6]
   [0.6 0.5 0.7]
   [1.0 0.3 0.3]
   [1.3 0.5 0.6]
   [0.7 0.6 0.8]
   [1.2 0.4 0.7]
   [1.1 0.2 0.7]
   [1.1 0.5 0.8]
   [0.4 0.2 0.4]
   [1.0 0.3 0.4]
   [0.8 0.4 0.7]
   [0.6 0.5 0.6]
   [1.1 0.5 0.4]
   [0.7 0.2 0.5]
   [1.1 0.3 0.4]
   [1.4 0.3 0.6]
   [0.7 0.5 0.4]
   [0.6 0.4 0.3]
   [1.1 0.6 0.8]
   [1.3 0.4 0.7]
   [0.6 0.6 0.7]
   [0.7 0.5 0.4]
   [0.8 0.4 0.6]
   [0.7 0.2 0.7]
   [0.9 0.2 0.5]
   [0.7 0.5 0.7]
   [1.0 0.4 0.4]
   [1.2 0.5 0.7]
   [0.8 0.4 0.8]
   [0.6 0.5 0.5]
   [0.6 0.4 0.5]
   [0.8 0.5 0.7]
   [1.3 0.4 0.6]
   [0.6 0.3 0.5]
   [0.8 0.6 0.7]
   [0.6 0.6 0.6]
   [0.6 0.2 0.5]
   [0.9 0.2 0.4]
   [1.4 0.3 0.7]
   [1.1 0.5 0.6]
   [1.1 0.4 0.5]
   [0.8 0.3 0.5]
   [0.9 0.5 0.4]
   [1.0 0.4 0.4]
   [1.3 0.5 0.8]
   [1.1 0.4 0.4]
   [1.0 0.2 0.6]
   [0.6 0.6 0.4]
   [1.3 0.5 0.6]
   [0.6 0.3 0.3]
   [0.8 0.5 0.7]
   [1.1 0.5 0.4]
   [0.4 0.3 0.5]
   [1.0 0.5 0.3]
   [0.5 0.5 0.3]
   [1.0 0.6 0.5]
   [0.8 0.3 0.7]
   [0.6 0.4 0.4]
   [0.7 0.4 0.6]
   [1.0 0.6 0.5]
   [1.1 0.5 0.5]
   [1.0 0.4 0.4]
   [0.6 0.4 0.4]]
# ---
# name: TestMDA.test_trajectory_update[False].1
  [[1.2 0.3 0.8]
   [0.7 0.4 0.4]
   [1.2 0.5 0.6]
   [0.8 0.2 0.7]
   [0.5 0.3 0.4]
   [0.4 0.3 0.5]
   [0.7 0.5 0.5]
   [1.3 0.3 0.6]
   [1.1 0.7 0.6]
   [0.9 0.4 0.4]
   [1.0 0.2 0.5]
   [0.5 0.2 0.5]
   [0.8 0.3 0.5]
   [1.3 0.5 0.6]
   [0.7 0.6 0.8]
   [1.1 0.5 0.4]
   [1.1 0.4 0.8]
   [1.1 0.4 0.8]
   [0.5 0.5 0.3]
   [0.8 0.5 0.7]
   [1.3 0.3 0.7]
   [1.3 0.4 0.7]
   [0.8 0.2 0.7]
   [0.9 0.4 0.5]
   [0.6 0.4 0.3]
   [1.2 0.6 0.4]
   [0.8 0.2 0.5]
   [0.5 0.5 0.3]
   [0.9 0.3 0.4]
   [1.0 0.5 0.5]
   [0.9 0.4 0.6]
   [1.1 0.5 0.5]
   [0.5 0.5 0.4]
   [0.7 0.5 0.7]
   [0.9 0.2 0.6]
   [0.5 0.4 0.3]
   [0.6 0.3 0.5]
   [1.4 0.3 0.6]
   [0.6 0.5 0.7]
   [1.0 0.3 0.3]
   [1.2 0.5 0.6]
   [0.7 0.6 0.8]
   [1.2 0.4 0.7]
   [1.2 0.2 0.7]
   [1.1 0.5 0.8]
   [0.4 0.2 0.4]
   [1.0 0.3 0.4]
   [0.8 0.4 0.7]
   [0.6 0.5 0.6]
   [1.1 0.6 0.4]
   [0.7 0.2 0.5]
   [1.0 0.3 0.4]
   [1.4 0.3 0.6]
   [0.7 0.5 0.4]
   [0.6 0.4 0.3]
   [1.1 0.6 0.8]
   [1.3 0.4 0.7]
   [0.6 0.6 0.7]
   [0.7 0.5 0.3]
   [0.8 0.4 0.6]
   [0.7 0.2 0.7]
   [0.9 0.2 0.5]
   [0.7 0.5 0.7]
   [1.0 0.4 0.4]
   [1.2 0.5 0.7]
   [0.8 0.4 0.7]
   [0.6 0.5 0.5]
   [0.5 0.4 0.5]
   [0.8 0.5 0.6]
   [1.3 0.5 0.6]
   [0.6 0.3 0.5]
   [0.8 0.5 0.7]
   [0.6 0.5 0.6]
   [0.5 0.2 0.5]
   [0.9 0.2 0.4]
   [1.4 0.4 0.7]
   [1.1 0.5 0.6]
   [1.1 0.4 0.5]
   [0.8 0.3 0.5]
   [0.9 0.5 0.4]
   [1.0 0.4 0.4]
   [1.3 0.4 0.8]
   [1.1 0.4 0.4]
   [0.9 0.2 0.6]
   [0.6 0.6 0.4]
   [1.3 0.5 0.6]
   [0.6 0.3 0.3]
   [0.8 0.5 0.7]
   [1.1 0.5 0.4]
   [0.4 0.3 0.5]
   [1.0 0.5 0.3]
   [0.5 0.5 0.3]
   [1.0 0.6 0.5]
   [0.8 0.3 0.7]
   [0.6 0.4 0.4]
   [0.7 0.4 0.6]
   [1.0 0.6 0.5]
   [1.1 0.5 0.5]
   [1.0 0.4 0.4]
   [0.6 0.4 0.4]]
# ---
# name: TestMDA.test_trajectory_update[True]
  [[0.5 0.5 0.3]
   [1.2 0.3 0.8]
   [0.9 0.2 0.5]
   [0.6 0.3 0.5]
   [0.4 0.3 0.5]
   [0.7 0.5 0.6]
   [1.3 0.4 0.7]
   [1.0 0.6 0.5]
   [1.0 0.4 0.4]
   [0.4 0.2 0.4]
   [1.0 0.2 0.5]
   [1.2 0.2 0.6]
   [0.7 0.4 0.8]
   [1.3 0.5 0.6]
   [0.7 0.5 0.4]
   [0.8 0.4 0.8]
   [1.0 0.3 0.5]
   [0.6 0.5 0.4]
   [1.1 0.6 0.7]
   [1.0 0.5 0.4]
   [0.7 0.5 0.5]
   [1.1 0.6 0.5]
   [1.2 0.5 0.6]
   [0.9 0.2 0.6]
   [1.3 0.5 0.7]
   [0.7 0.5 0.4]
   [0.7 0.4 0.8]
   [0.9 0.4 0.4]
   [0.8 0.5 0.4]
   [0.6 0.3 0.3]
   [0.7 0.3 0.7]
   [1.1 0.6 0.4]
   [1.2 0.3 0.7]
   [0.7 0.4 0.8]
   [1.0 0.4 0.5]
   [0.5 0.4 0.5]
   [0.4 0.3 0.4]
   [1.1 0.6 0.4]
   [1.0 0.2 0.6]
   [1.1 0.5 0.7]
   [1.0 0.3 0.4]
   [1.2 0.5 0.4]
   [0.7 0.5 0.5]
   [0.6 0.5 0.5]
   [1.4 0.3 0.6]
   [0.7 0.4 0.7]
   [0.6 0.5 0.5]
   [1.0 0.2 0.5]
   [0.9 0.3 0.3]
   [0.7 0.4 0.8]
   [1.1 0.5 0.5]
   [1.2 0.2 0.7]
   [0.8 0.3 0.7]
   [0.6 0.6 0.6]
   [0.9 0.4 0.7]
   [0.6 0.2 0.5]
   [0.8 0.4 0.7]
   [0.6 0.5 0.7]
   [0.5 0.2 0.5]
   [1.1 0.4 0.4]
   [1.0 0.3 0.3]
   [1.0 0.5 0.6]
   [1.1 0.6 0.6]
   [1.2 0.6 0.5]
   [0.9 0.4 0.4]
   [0.8 0.6 0.5]
   [1.2 0.3 0.6]
   [0.4 0.3 0.3]
   [0.9 0.5 0.7]
   [1.2 0.5 0.7]
   [1.0 0.7 0.6]
   [0.7 0.5 0.4]
   [1.3 0.4 0.7]
   [0.9 0.2 0.6]
   [0.6 0.5 0.4]
   [1.3 0.4 0.7]
   [1.3 0.4 0.8]
   [1.1 0.5 0.5]
   [0.6 0.5 0.4]
   [1.1 0.5 0.6]
   [1.1 0.6 0.7]
   [1.3 0.4 0.7]
   [1.0 0.3 0.4]
   [1.2 0.5 0.6]
   [0.5 0.5 0.5]
   [0.8 0.4 0.8]
   [1.0 0.3 0.5]
   [1.2 0.4 0.8]
   [1.2 0.3 0.7]
   [0.7 0.4 0.7]
   [0.5 0.2 0.5]
   [0.4 0.2 0.4]
   [0.7 0.6 0.5]
   [0.8 0.2 0.6]
   [1.1 0.5 0.4]
   [0.8 0.4 0.8]
   [0.8 0.2 0.6]
   [0.5 0.3 0.5]
   [1.2 0.4 0.7]
   [1.1 0.4 0.4]]
# ---
# name: TestMDA.test_trajectory_update[True].1
  [[-8.0e-03 -1.4e-02  0.0e+00]
   [ 1.2e-02 -1.0e-02  0.0e+00]
   [ 1.6e-02  0.0e+00  0.0e+00]
   [ 1.2e-02  1.0e-02  0.0e+00]
   [ 2.8e-03  1.6e-02  0.0e+00]
   [ 1.6e-02  0.0e+00  0.0e+00]
   [ 2.8e-03  1.6e-02  0.0e+00]
   [ 2.8e-03  1.6e-02  0.0e+00]
   [-8.0e-03 -1.4e-02  0.0e+00]
   [-8.0e-03  1.4e-02  0.0e+00]
   [-8.0e-03 -1.4e-02  0.0e+00]
   [-1.5e-02 -5.5e-03  0.0e+00]
   [-1.5e-02 -5.5e-03  0.0e+00]
   [-8.0e-03 -1.4e-02  0.0e+00]
   [ 1.6e-02  0.0e+00  0.0e+00]
   [ 2.8e-03  1.6e-02  0.0e+00]
   [-1.5e-02  5.5e-03  0.0e+00]
   [-1.5e-02 -5.5e-03  0.0e+00]
   [-1.5e-02 -5.5e-03  0.0e+00]
   [-1.5e-02 -5.5e-03  0.0e+00]
   [ 1.2e-02  1.0e-02  0.0e+00]
   [ 1.6e-02  0.0e+00  0.0e+00]
   [ 1.2e-02  1.0e-02  0.0e+00]
   [ 1.2e-02 -1.0e-02  0.0e+00]
   [ 1.2e-02 -1.0e-02  0.0e+00]
   [ 2.8e-03 -1.6e-02  0.0e+00]
   [-8.0e-03 -1.4e-02  0.0e+00]
   [-8.0e-03  1.4e-02  0.0e+00]
   [-8.0e-03  1.4e-02  0.0e+00]
   [-1.5e-02 -5.5e-03  0.0e+00]
   [-8.0e-03 -1.4e-02  0.0e+00]
   [ 1.2e-02  1.0e-02  0.0e+00]
   [ 1.6e-02  0.0e+00  0.0e+00]
   [-1.5e-02 -5.5e-03  0.0e+00]
   [-1.4e-02  8.0e-03  0.0e+00]
   [-1.6e-02 -1.4e-09  0.0e+00]
   [ 1.2e-02 -1.0e-02  0.0e+00]
   [-1.5e-02  5.5e-03  0.0e+00]
   [ 2.8e-03  1.6e-02  0.0e+00]
   [ 1.2e-02 -1.0e-02  0.0e+00]
   [ 1.6e-02  0.0e+00  0.0e+00]
   [-8.0e-03  1.4e-02  0.0e+00]
   [ 2.8e-03 -1.6e-02  0.0e+00]
   [ 1.6e-02  0.0e+00  0.0e+00]
   [ 1.6e-02  0.0e+00  0.0e+00]
   [ 1.2e-02 -1.0e-02  0.0e+00]
   [-8.0e-03 -1.4e-02  0.0e+00]
   [-8.0e-03 -1.4e-02  0.0e+00]
   [ 1.2e-02 -1.0e-02  0.0e+00]
   [ 2.8e-03 -1.6e-02  0.0e+00]
   [-8.0e-03 -1.4e-02  0.0e+00]
   [-1.5e-02  5.5e-03  0.0e+00]
   [ 1.2e-02 -1.0e-02  0.0e+00]
   [-1.5e-02 -5.5e-03  0.0e+00]
   [-8.0e-03  1.4e-02  0.0e+00]
   [ 1.2e-02  1.0e-02  0.0e+00]
   [-8.0e-03  1.4e-02  0.0e+00]
   [-1.5e-02 -5.5e-03  0.0e+00]
   [ 1.2e-02  1.0e-02  0.0e+00]
   [ 1.2e-02  1.0e-02  0.0e+00]
   [ 1.2e-02  1.0e-02  0.0e+00]
   [ 1.2e-02 -1.0e-02  0.0e+00]
   [ 1.2e-02  1.0e-02  0.0e+00]
   [ 2.8e-03 -1.6e-02  0.0e+00]
   [-1.5e-02  5.5e-03  0.0e+00]
   [-1.5e-02 -5.5e-03  0.0e+00]
   [ 1.6e-02  0.0e+00  0.0e+00]
   [ 1.2e-02 -1.0e-02  0.0e+00]
   [-8.0e-03 -1.4e-02  0.0e+00]
   [-8.0e-03  1.4e-02  0.0e+00]
   [-8.0e-03  1.4e-02  0.0e+00]
   [ 1.2e-02 -1.0e-02  0.0e+00]
   [ 1.6e-02  0.0e+00  0.0e+00]
   [ 2.8e-03  1.6e-02  0.0e+00]
   [-1.5e-02  5.5e-03  0.0e+00]
   [-1.5e-02  5.5e-03  0.0e+00]
   [-8.0e-03  1.4e-02  0.0e+00]
   [ 1.2e-02  1.0e-02  0.0e+00]
   [ 2.8e-03 -1.6e-02  0.0e+00]
   [-1.6e-02 -1.4e-09  0.0e+00]
   [ 1.6e-02  0.0e+00  0.0e+00]
   [ 1.2e-02  1.0e-02  0.0e+00]
   [-8.0e-03 -1.4e-02  0.0e+00]
   [-8.0e-03 -1.4e-02  0.0e+00]
   [-8.0e-03 -1.4e-02  0.0e+00]
   [ 1.2e-02  1.0e-02  0.0e+00]
   [-1.5e-02 -5.5e-03  0.0e+00]
   [-8.0e-03 -1.4e-02  0.0e+00]
   [ 1.6e-02  0.0e+00  0.0e+00]
   [-8.0e-03  1.4e-02  0.0e+00]
   [ 1.6e-02  0.0e+00  0.0e+00]
   [ 2.8e-03  1.6e-02  0.0e+00]
   [ 2.8e-03  1.6e-02  0.0e+00]
   [-8.0e-03 -1.4e-02  0.0e+00]
   [ 1.6e-02  0.0e+00  0.0e+00]
   [-8.0e-03 -1.4e-02  0.0e+00]
   [-8.0e-03  1.4e-02  0.0e+00]
   [-8.0e-03  1.4e-02  0.0e+00]
   [ 1.2e-02 -1.0e-02  0.0e+00]
   [ 1.2e-02 -1.0e-02  0.0e+00]]
# ---
# name: test_martini[pent/TOPOL2.pdb]
  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0.]
# ---
# name: test_martini[pent/TOPOL2.pdb].1
  [10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8
   10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8
   10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8
   10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8
   10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8
   10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8
   10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8
   10.8 10.8]
# ---
# name: test_martini[pent/TOPOL2.pdb].10
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_martini[pent/TOPOL2.pdb].11
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_martini[pent/TOPOL2.pdb].12
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_martini[pent/TOPOL2.pdb].13
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_martini[pent/TOPOL2.pdb].14
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_martini[pent/TOPOL2.pdb].15
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_martini[pent/TOPOL2.pdb].16
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_martini[pent/TOPOL2.pdb].17
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_martini[pent/TOPOL2.pdb].18
  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0.]
# ---
# name: test_martini[pent/TOPOL2.pdb].19
  [10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8
   10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8
   10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8
   10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8
   10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8
   10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8
   10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8 10.8
   10.8 10.8]
# ---
# name: test_martini[pent/TOPOL2.pdb].2
  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0.]
# ---
# name: test_martini[pent/TOPOL2.pdb].20
  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0.]
# ---
# name: test_martini[pent/TOPOL2.pdb].21
  [5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5
   5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5
   5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5]
# ---
# name: test_martini[pent/TOPOL2.pdb].22
  [254 477 424 359   5 356 333 449 456 214   3 514 337 316 465 474 387 287
   462 327 420  84 376 342 277 316  90 382 328 182 419 445 364 325 493 294
   235 129 277 335 262 469 310 296 104 343  95 338 347  77 485 387 319 514
   464  47 284 451 308 123 246  56 167  58 327 463 490 359  75 163 174 513
   524 213 403 159 404  52 266 336  99 109 516 214 255 437 340 301 268 306
   279 465 150 502  85 181 213 461 142 323]
# ---
# name: test_martini[pent/TOPOL2.pdb].23
  [ 7 15 11 12 14 10 13  6  0  8 12 11  8  5  5 11 13 16 16  5 13 14  9  6
   19  2  4 14 12 12 18  9  8  7  6 11  3 13 18 10 15  2  9  5 18 12  9 15
   12  8 12 19  8 11 10  6 13 14 14 10  0 12  2  2  8  5 14 11 16  8  3 10
    4  3 11  6 11 11  6  7 11 13 17 11  9 10  7 12  5  7 16  5  1 17 12  1
    6 18  2  7]
# ---
# name: test_martini[pent/TOPOL2.pdb].24
  [1 2 1 1 1 1 2 2 2 1 2 2 1 2 2 2 1 1 1 1 2 2 1 2 2 1 2 1 1 2 1 1 1 2 2 1 2
   2 1 2 1 2 2 2 1 1 2 2 1 1 1 2 1 2 2 1 1 1 2 1 1 1 1 2 2 2 2 2 2 2 1 2 1 1
   2 2 1 2 1 1 2 2 2 1 2 2 2 2 2 1 1 1 2 2 1 1 1 2 1 1]
# ---
# name: test_martini[pent/TOPOL2.pdb].25
  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
# ---
# name: test_martini[pent/TOPOL2.pdb].26
  [-1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1]
# ---
# name: test_martini[pent/TOPOL2.pdb].27
  [[1.3 1.4 1.5]
   [0.7 1.3 0.8]
   [0.9 0.8 1.3]
   [1.5 1.0 1.8]
   [1.6 1.3 1.0]
   [0.7 1.7 1.1]
   [0.6 1.2 1.1]
   [1.6 1.5 1.4]
   [1.6 0.7 1.3]
   [1.6 1.1 1.2]
   [1.7 0.9 1.1]
   [0.6 1.2 0.7]
   [0.4 1.1 1.0]
   [1.1 1.8 1.3]
   [1.2 0.5 1.1]
   [1.0 0.6 1.0]
   [1.2 1.6 1.6]
   [0.6 1.1 1.0]
   [1.0 0.9 1.2]
   [1.3 1.6 1.7]
   [1.0 1.9 1.1]
   [1.7 1.4 1.3]
   [1.3 1.6 1.6]
   [1.5 1.6 1.7]
   [1.1 1.8 1.2]
   [1.1 0.6 1.4]
   [0.9 1.2 0.7]
   [1.2 1.7 1.7]
   [0.6 1.1 1.2]
   [1.7 0.7 1.2]
   [1.3 1.5 1.4]
   [1.5 1.0 1.5]
   [0.4 1.1 1.1]
   [1.6 1.6 1.7]
   [0.5 1.1 0.8]
   [0.5 1.0 1.0]
   [1.1 0.6 1.1]
   [1.0 0.7 0.8]
   [1.5 1.0 1.5]
   [1.4 1.5 1.7]
   [1.1 0.8 1.4]
   [1.0 1.8 0.9]
   [1.3 0.7 1.5]
   [1.5 1.4 1.8]
   [1.1 1.5 0.9]
   [1.4 1.7 1.7]
   [1.1 0.8 1.0]
   [0.8 0.7 1.4]
   [0.6 1.0 1.2]
   [0.9 1.3 1.1]
   [1.1 1.0 1.3]
   [1.6 0.6 1.6]
   [0.6 1.1 1.0]
   [1.7 1.7 1.4]
   [0.7 1.0 0.8]
   [1.4 0.7 1.0]
   [1.0 1.7 1.2]
   [0.9 1.0 0.9]
   [0.8 0.8 1.2]
   [1.3 1.3 1.2]
   [0.6 1.2 1.1]
   [1.0 1.2 0.8]
   [1.6 1.2 1.3]
   [1.7 1.5 1.1]
   [1.5 0.7 1.7]
   [1.6 1.7 1.4]
   [1.7 1.8 1.5]
   [0.7 0.7 1.2]
   [1.2 2.0 0.9]
   [1.6 0.8 1.1]
   [1.0 1.5 0.9]
   [0.6 1.2 0.7]
   [1.1 1.0 1.5]
   [1.1 1.1 0.8]
   [1.2 1.9 1.3]
   [1.3 1.8 0.8]
   [1.3 1.7 1.4]
   [1.0 1.2 0.8]
   [1.1 0.7 1.3]
   [1.5 1.7 1.7]
   [0.9 1.2 0.9]
   [0.8 1.3 0.6]
   [1.7 1.7 1.4]
   [1.5 1.5 1.1]
   [0.9 0.5 1.0]
   [1.0 1.8 1.1]
   [0.5 1.2 1.1]
   [1.3 0.7 1.5]
   [1.1 1.8 1.2]
   [1.5 1.7 1.5]
   [0.7 1.0 1.0]
   [1.0 0.9 1.1]
   [0.8 1.3 0.5]
   [0.7 1.1 0.8]
   [1.0 1.0 1.0]
   [1.5 1.2 1.3]
   [1.6 1.1 1.2]
   [1.1 0.5 1.1]
   [0.9 1.3 1.0]
   [1.0 0.7 1.4]]
# ---
# name: test_martini[pent/TOPOL2.pdb].28
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_martini[pent/TOPOL2.pdb].29
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_martini[pent/TOPOL2.pdb].3
  [5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5
   5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5
   5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5]
# ---
# name: test_martini[pent/TOPOL2.pdb].30
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_martini[pent/TOPOL2.pdb].31
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_martini[pent/TOPOL2.pdb].32
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_martini[pent/TOPOL2.pdb].33
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_martini[pent/TOPOL2.pdb].34
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_martini[pent/TOPOL2.pdb].35
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_martini[pent/TOPOL2.pdb].4
  [254 477 424 359   5 356 333 449 456 214   3 514 337 316 465 474 387 287
   462 327 420  84 376 342 277 316  90 382 328 182 419 445 364 325 493 294
   235 129 277 335 262 469 310 296 104 343  95 338 347  77 485 387 319 514
   464  47 284 451 308 123 246  56 167  58 327 463 490 359  75 163 174 513
   524 213 403 159 404  52 266 336  99 109 516 214 255 437 340 301 268 306
   279 465 150 502  85 181 213 461 142 323]
# ---
# name: test_martini[pent/TOPOL2.pdb].5
  [ 7 15 11 12 14 10 13  6  0  8 12 11  8  5  5 11 13 16 16  5 13 14  9  6
   19  2  4 14 12 12 18  9  8  7  6 11  3 13 18 10 15  2  9  5 18 12  9 15
   12  8 12 19  8 11 10  6 13 14 14 10  0 12  2  2  8  5 14 11 16  8  3 10
    4  3 11  6 11 11  6  7 11 13 17 11  9 10  7 12  5  7 16  5  1 17 12  1
    6 18  2  7]
# ---
# name: test_martini[pent/TOPOL2.pdb].6
  [1 2 1 1 1 1 2 2 2 1 2 2 1 2 2 2 1 1 1 1 2 2 1 2 2 1 2 1 1 2 1 1 1 2 2 1 2
   2 1 2 1 2 2 2 1 1 2 2 1 1 1 2 1 2 2 1 1 1 2 1 1 1 1 2 2 2 2 2 2 2 1 2 1 1
   2 2 1 2 1 1 2 2 2 1 2 2 2 2 2 1 1 1 2 2 1 1 1 2 1 1]
# ---
# name: test_martini[pent/TOPOL2.pdb].7
  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
# ---
# name: test_martini[pent/TOPOL2.pdb].8
  [-1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1]
# ---
# name: test_martini[pent/TOPOL2.pdb].9
  [[1.3 1.4 1.5]
   [0.7 1.3 0.8]
   [0.9 0.8 1.3]
   [1.5 1.0 1.8]
   [1.6 1.3 1.0]
   [0.7 1.7 1.1]
   [0.6 1.2 1.1]
   [1.6 1.5 1.4]
   [1.6 0.7 1.3]
   [1.6 1.1 1.2]
   [1.7 0.9 1.1]
   [0.6 1.2 0.7]
   [0.4 1.1 1.0]
   [1.1 1.8 1.3]
   [1.2 0.5 1.1]
   [1.0 0.6 1.0]
   [1.2 1.6 1.6]
   [0.6 1.1 1.0]
   [1.0 0.9 1.2]
   [1.3 1.6 1.7]
   [1.0 1.9 1.1]
   [1.7 1.4 1.3]
   [1.3 1.6 1.6]
   [1.5 1.6 1.7]
   [1.1 1.8 1.2]
   [1.1 0.6 1.4]
   [0.9 1.2 0.7]
   [1.2 1.7 1.7]
   [0.6 1.1 1.2]
   [1.7 0.7 1.2]
   [1.3 1.5 1.4]
   [1.5 1.0 1.5]
   [0.4 1.1 1.1]
   [1.6 1.6 1.7]
   [0.5 1.1 0.8]
   [0.5 1.0 1.0]
   [1.1 0.6 1.1]
   [1.0 0.7 0.8]
   [1.5 1.0 1.5]
   [1.4 1.5 1.7]
   [1.1 0.8 1.4]
   [1.0 1.8 0.9]
   [1.3 0.7 1.5]
   [1.5 1.4 1.8]
   [1.1 1.5 0.9]
   [1.4 1.7 1.7]
   [1.1 0.8 1.0]
   [0.8 0.7 1.4]
   [0.6 1.0 1.2]
   [0.9 1.3 1.1]
   [1.1 1.0 1.3]
   [1.6 0.6 1.6]
   [0.6 1.1 1.0]
   [1.7 1.7 1.4]
   [0.7 1.0 0.8]
   [1.4 0.7 1.0]
   [1.0 1.7 1.2]
   [0.9 1.0 0.9]
   [0.8 0.8 1.2]
   [1.3 1.3 1.2]
   [0.6 1.2 1.1]
   [1.0 1.2 0.8]
   [1.6 1.2 1.3]
   [1.7 1.5 1.1]
   [1.5 0.7 1.7]
   [1.6 1.7 1.4]
   [1.7 1.8 1.5]
   [0.7 0.7 1.2]
   [1.2 2.0 0.9]
   [1.6 0.8 1.1]
   [1.0 1.5 0.9]
   [0.6 1.2 0.7]
   [1.1 1.0 1.5]
   [1.1 1.1 0.8]
   [1.2 1.9 1.3]
   [1.3 1.8 0.8]
   [1.3 1.7 1.4]
   [1.0 1.2 0.8]
   [1.1 0.7 1.3]
   [1.5 1.7 1.7]
   [0.9 1.2 0.9]
   [0.8 1.3 0.6]
   [1.7 1.7 1.4]
   [1.5 1.5 1.1]
   [0.9 0.5 1.0]
   [1.0 1.8 1.1]
   [0.5 1.2 1.1]
   [1.3 0.7 1.5]
   [1.1 1.8 1.2]
   [1.5 1.7 1.5]
   [0.7 1.0 1.0]
   [1.0 0.9 1.1]
   [0.8 1.3 0.5]
   [0.7 1.1 0.8]
   [1.0 1.0 1.0]
   [1.5 1.2 1.3]
   [1.6 1.1 1.2]
   [1.1 0.5 1.1]
   [0.9 1.3 1.0]
   [1.0 0.7 1.4]]
# ---
# name: test_martini[pent/prot_ion.tpr]
  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0.]
# ---
# name: test_martini[pent/prot_ion.tpr].1
  [72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72.
   72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72.
   72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72.
   72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72.
   72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72.
   72. 72. 72. 72. 72. 72. 72. 72. 72. 72.]
# ---
# name: test_martini[pent/prot_ion.tpr].10
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_martini[pent/prot_ion.tpr].11
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_martini[pent/prot_ion.tpr].12
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_martini[pent/prot_ion.tpr].13
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_martini[pent/prot_ion.tpr].14
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_martini[pent/prot_ion.tpr].15
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_martini[pent/prot_ion.tpr].16
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_martini[pent/prot_ion.tpr].17
  [[ 46133  46142]
   [251501 251502]
   [131500 131501]
   [ 10045  10046]
   [  4257   4266]
   [ 66951  66952]
   [236003 236004]
   [191325 191326]
   [163504 163505]
   [  6622   6631]
   [145026 145035]
   [255493 255494]
   [ 93466  93467]
   [205589 205590]
   [278793 278794]
   [279785 279786]
   [ 41654  41655]
   [ 88095  88096]
   [135589 135590]
   [ 35257  35258]
   [216801 216802]
   [195653 195662]
   [ 40526  40518]
   [179769 179770]
   [201330 201331]
   [119824 119825]
   [230304 230313]
   [ 41203  41204]
   [ 92475  92476]
   [148092 148101]
   [ 45157  45158]
   [ 19336  19337]
   [ 96367  96368]
   [177923 177924]
   [253250 253242]
   [ 88869  88870]
   [285649 285658]
   [267907 267916]
   [  1236   1237]
   [178968 178969]
   [139823 139832]
   [222033 222034]
   [147711 147712]
   [174777 174778]
   [ 71454  71463]
   [ 36912  36913]
   [263127 263136]
   [265118 265119]
   [ 94534  94535]
   [ 73973  73982]
   [138067 138068]
   [156054 156055]
   [ 91491  91492]
   [198294 198295]
   [250148 250149]
   [130681 130690]
   [ 59116  59117]
   [105816 105817]
   [261844 261845]
   [  3919   3928]
   [ 95633  95642]
   [110584 110593]
   [ 18158  18167]
   [199018 199027]
   [149598 149599]
   [192868 192869]
   [195775 195776]
   [267331 267332]
   [215633 215642]
   [157451 157460]
   [ 82742  82751]
   [255405 255406]
   [ 27870  27871]
   [ 92131  92140]
   [214902 214903]
   [211091 211100]
   [ 43511  43512]
   [250066 250075]
   [114397 114398]
   [ 36251  36243]
   [238791 238800]
   [249006 249015]
   [198516 198517]
   [ 36016  36025]
   [276299 276308]
   [218606 218607]
   [236711 236712]
   [146806 146807]
   [200406 200407]
   [ 32973  32974]
   [ 87215  87216]
   [135902 135903]
   [231170 231179]
   [254258 254250]
   [110189 110198]
   [  3579   3588]
   [  6460   6469]
   [278413 278414]
   [ 79798  79807]
   [120506 120507]]
# ---
# name: test_martini[pent/prot_ion.tpr].18
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_martini[pent/prot_ion.tpr].19
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_martini[pent/prot_ion.tpr].2
  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0.]
# ---
# name: test_martini[pent/prot_ion.tpr].20
  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0.]
# ---
# name: test_martini[pent/prot_ion.tpr].21
  [72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72.
   72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72.
   72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72.
   72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72.
   72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72.
   72. 72. 72. 72. 72. 72. 72. 72. 72. 72.]
# ---
# name: test_martini[pent/prot_ion.tpr].22
  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0.]
# ---
# name: test_martini[pent/prot_ion.tpr].23
  [5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5
   5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5
   5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5]
# ---
# name: test_martini[pent/prot_ion.tpr].24
  [ 784 4717 2544  359    5 1416 4573 3629 3106  214 2653 4754 1927 4026
   5235 5244  917 1877 2582  857 4130 3264  906 3522 3987 2436 4330  912
   1918 2832  949  445 1954 3505 4733 1884 5005 4899  277 3515 2382 4179
   2960 3476 1164  873 4865 5108 1937 1137 2605 3037 1909 3694 4704 2167
   1344 2041 5078  123 1836 1646  167 3238 2977 3643 3670 5129 3785 2813
   1234 4753  524 1803 4113 3869  934 4292 2386  866 4339 4349 3696  744
   5025 4147 4580 2951 3978  836 1869 2585 4390 4742 1675  181  213 5231
   1202 2443]
# ---
# name: test_martini[pent/prot_ion.tpr].25
  [ 7 15 11 12 14 10 13  6  0  8 12 11  8  5  5 11 13 16 16  5 13 14  9  6
   19  2  4 14 12 12 18  9  8  7  6 11  3 13 18 10 15  2  9  5 18 12  9 15
   12  8 12 19  8 11 10  6 13 14 14 10  0 12  2  2  8  5 14 11 16  8  3 10
    4  3 11  6 11 11  6  7 11 13 17 11  9 10  7 12  5  7 16  5  1 17 12  1
    6 18  2  7]
# ---
# name: test_martini[pent/prot_ion.tpr].26
  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
# ---
# name: test_martini[pent/prot_ion.tpr].27
  [ 7  5  7  7 10 10  8 10  4  9 10 10 10  9  7  7 10  6  8  7  7  8  7  7
   10  9  9  5  7  7  7  5  9 10 10  8 10  9 10  9 10  8 10  9  7  7  6 10
   10  7  9 10  7 10  5 10 10  9  9  7  9  7 10  8  7  9 10  7  9  9 10 10
   10  7 10  7 10 10 10 10  7  7 10 10  7 10 10  7 10 10  7  7  5  7  9  7
    8  7  5 10]
# ---
# name: test_martini[pent/prot_ion.tpr].28
  [-1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1]
# ---
# name: test_martini[pent/prot_ion.tpr].29
  [[1.6 0.7 1.5]
   [1.2 0.8 1.3]
   [0.9 1.6 1.3]
   [1.5 1.0 1.8]
   [1.6 1.3 1.0]
   [1.3 1.8 1.5]
   [0.9 0.5 1.3]
   [0.8 1.1 0.9]
   [1.2 1.8 1.0]
   [1.6 1.1 1.2]
   [1.1 1.6 0.8]
   [1.1 1.0 1.2]
   [1.3 1.5 1.7]
   [0.6 1.4 1.0]
   [1.2 0.5 1.1]
   [1.0 0.6 1.0]
   [1.6 0.6 1.6]
   [1.5 1.5 1.6]
   [1.1 1.5 1.2]
   [1.5 0.6 1.6]
   [0.6 1.2 0.8]
   [1.0 1.0 1.0]
   [1.5 0.7 1.6]
   [0.5 1.1 1.1]
   [0.7 1.3 0.9]
   [0.8 1.7 1.2]
   [1.2 0.9 1.1]
   [1.5 0.5 1.7]
   [1.6 1.6 1.7]
   [1.3 1.8 0.9]
   [1.6 0.7 1.5]
   [1.5 1.0 1.5]
   [1.5 1.5 1.8]
   [0.6 1.1 1.2]
   [1.0 0.9 1.3]
   [1.4 1.4 1.8]
   [1.1 0.6 1.1]
   [1.0 0.7 0.8]
   [1.5 1.0 1.5]
   [0.5 1.1 1.0]
   [0.8 1.5 1.2]
   [0.7 1.1 0.7]
   [1.1 1.8 1.4]
   [0.4 1.0 1.1]
   [1.5 1.5 1.1]
   [1.4 0.7 1.7]
   [1.1 0.8 1.0]
   [0.8 0.7 1.4]
   [1.6 1.6 1.7]
   [1.2 1.5 1.2]
   [1.0 1.4 1.3]
   [1.0 2.0 1.2]
   [1.5 1.5 1.6]
   [0.9 1.2 1.2]
   [1.0 0.9 1.1]
   [1.1 1.6 0.8]
   [1.4 1.6 1.5]
   [1.6 1.4 1.3]
   [0.8 0.8 1.2]
   [1.3 1.3 1.2]
   [1.5 1.6 1.6]
   [1.6 1.5 1.1]
   [1.6 1.2 1.3]
   [1.1 1.2 0.9]
   [1.0 1.9 1.3]
   [0.8 1.3 1.1]
   [0.9 1.2 1.2]
   [0.7 0.7 1.2]
   [0.6 1.4 0.6]
   [1.3 1.7 0.9]
   [1.4 1.6 1.2]
   [1.1 1.0 1.2]
   [1.1 1.0 1.5]
   [1.7 1.4 1.1]
   [0.6 1.4 0.9]
   [0.9 1.3 0.6]
   [1.4 0.6 1.4]
   [1.3 0.8 0.9]
   [0.9 1.6 1.2]
   [1.3 0.8 1.7]
   [1.2 0.8 1.0]
   [1.3 1.0 1.1]
   [0.9 1.2 1.2]
   [1.6 0.9 1.1]
   [0.9 0.5 1.0]
   [0.6 1.2 0.8]
   [0.8 0.5 1.3]
   [1.0 1.8 1.4]
   [0.6 1.3 0.9]
   [1.3 0.8 1.5]
   [1.6 1.5 1.6]
   [1.2 1.6 1.3]
   [1.3 1.1 1.2]
   [1.1 0.9 1.1]
   [1.7 1.4 1.3]
   [1.5 1.2 1.3]
   [1.6 1.1 1.2]
   [1.1 0.5 1.1]
   [1.2 1.5 1.1]
   [0.8 1.7 1.2]]
# ---
# name: test_martini[pent/prot_ion.tpr].3
  [5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5
   5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5
   5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5]
# ---
# name: test_martini[pent/prot_ion.tpr].30
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_martini[pent/prot_ion.tpr].31
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_martini[pent/prot_ion.tpr].32
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_martini[pent/prot_ion.tpr].33
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_martini[pent/prot_ion.tpr].34
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_martini[pent/prot_ion.tpr].35
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_martini[pent/prot_ion.tpr].36
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_martini[pent/prot_ion.tpr].37
  [[ 46133  46142]
   [251501 251502]
   [131500 131501]
   [ 10045  10046]
   [  4257   4266]
   [ 66951  66952]
   [236003 236004]
   [191325 191326]
   [163504 163505]
   [  6622   6631]
   [145026 145035]
   [255493 255494]
   [ 93466  93467]
   [205589 205590]
   [278793 278794]
   [279785 279786]
   [ 41654  41655]
   [ 88095  88096]
   [135589 135590]
   [ 35257  35258]
   [216801 216802]
   [195653 195662]
   [ 40526  40518]
   [179769 179770]
   [201330 201331]
   [119824 119825]
   [230304 230313]
   [ 41203  41204]
   [ 92475  92476]
   [148092 148101]
   [ 45157  45158]
   [ 19336  19337]
   [ 96367  96368]
   [177923 177924]
   [253250 253242]
   [ 88869  88870]
   [285649 285658]
   [267907 267916]
   [  1236   1237]
   [178968 178969]
   [139823 139832]
   [222033 222034]
   [147711 147712]
   [174777 174778]
   [ 71454  71463]
   [ 36912  36913]
   [263127 263136]
   [265118 265119]
   [ 94534  94535]
   [ 73973  73982]
   [138067 138068]
   [156054 156055]
   [ 91491  91492]
   [198294 198295]
   [250148 250149]
   [130681 130690]
   [ 59116  59117]
   [105816 105817]
   [261844 261845]
   [  3919   3928]
   [ 95633  95642]
   [110584 110593]
   [ 18158  18167]
   [199018 199027]
   [149598 149599]
   [192868 192869]
   [195775 195776]
   [267331 267332]
   [215633 215642]
   [157451 157460]
   [ 82742  82751]
   [255405 255406]
   [ 27870  27871]
   [ 92131  92140]
   [214902 214903]
   [211091 211100]
   [ 43511  43512]
   [250066 250075]
   [114397 114398]
   [ 36251  36243]
   [238791 238800]
   [249006 249015]
   [198516 198517]
   [ 36016  36025]
   [276299 276308]
   [218606 218607]
   [236711 236712]
   [146806 146807]
   [200406 200407]
   [ 32973  32974]
   [ 87215  87216]
   [135902 135903]
   [231170 231179]
   [254258 254250]
   [110189 110198]
   [  3579   3588]
   [  6460   6469]
   [278413 278414]
   [ 79798  79807]
   [120506 120507]]
# ---
# name: test_martini[pent/prot_ion.tpr].38
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_martini[pent/prot_ion.tpr].39
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_martini[pent/prot_ion.tpr].4
  [ 784 4717 2544  359    5 1416 4573 3629 3106  214 2653 4754 1927 4026
   5235 5244  917 1877 2582  857 4130 3264  906 3522 3987 2436 4330  912
   1918 2832  949  445 1954 3505 4733 1884 5005 4899  277 3515 2382 4179
   2960 3476 1164  873 4865 5108 1937 1137 2605 3037 1909 3694 4704 2167
   1344 2041 5078  123 1836 1646  167 3238 2977 3643 3670 5129 3785 2813
   1234 4753  524 1803 4113 3869  934 4292 2386  866 4339 4349 3696  744
   5025 4147 4580 2951 3978  836 1869 2585 4390 4742 1675  181  213 5231
   1202 2443]
# ---
# name: test_martini[pent/prot_ion.tpr].5
  [ 7 15 11 12 14 10 13  6  0  8 12 11  8  5  5 11 13 16 16  5 13 14  9  6
   19  2  4 14 12 12 18  9  8  7  6 11  3 13 18 10 15  2  9  5 18 12  9 15
   12  8 12 19  8 11 10  6 13 14 14 10  0 12  2  2  8  5 14 11 16  8  3 10
    4  3 11  6 11 11  6  7 11 13 17 11  9 10  7 12  5  7 16  5  1 17 12  1
    6 18  2  7]
# ---
# name: test_martini[pent/prot_ion.tpr].6
  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
# ---
# name: test_martini[pent/prot_ion.tpr].7
  [ 7  5  7  7 10 10  8 10  4  9 10 10 10  9  7  7 10  6  8  7  7  8  7  7
   10  9  9  5  7  7  7  5  9 10 10  8 10  9 10  9 10  8 10  9  7  7  6 10
   10  7  9 10  7 10  5 10 10  9  9  7  9  7 10  8  7  9 10  7  9  9 10 10
   10  7 10  7 10 10 10 10  7  7 10 10  7 10 10  7 10 10  7  7  5  7  9  7
    8  7  5 10]
# ---
# name: test_martini[pent/prot_ion.tpr].8
  [-1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1]
# ---
# name: test_martini[pent/prot_ion.tpr].9
  [[1.6 0.7 1.5]
   [1.2 0.8 1.3]
   [0.9 1.6 1.3]
   [1.5 1.0 1.8]
   [1.6 1.3 1.0]
   [1.3 1.8 1.5]
   [0.9 0.5 1.3]
   [0.8 1.1 0.9]
   [1.2 1.8 1.0]
   [1.6 1.1 1.2]
   [1.1 1.6 0.8]
   [1.1 1.0 1.2]
   [1.3 1.5 1.7]
   [0.6 1.4 1.0]
   [1.2 0.5 1.1]
   [1.0 0.6 1.0]
   [1.6 0.6 1.6]
   [1.5 1.5 1.6]
   [1.1 1.5 1.2]
   [1.5 0.6 1.6]
   [0.6 1.2 0.8]
   [1.0 1.0 1.0]
   [1.5 0.7 1.6]
   [0.5 1.1 1.1]
   [0.7 1.3 0.9]
   [0.8 1.7 1.2]
   [1.2 0.9 1.1]
   [1.5 0.5 1.7]
   [1.6 1.6 1.7]
   [1.3 1.8 0.9]
   [1.6 0.7 1.5]
   [1.5 1.0 1.5]
   [1.5 1.5 1.8]
   [0.6 1.1 1.2]
   [1.0 0.9 1.3]
   [1.4 1.4 1.8]
   [1.1 0.6 1.1]
   [1.0 0.7 0.8]
   [1.5 1.0 1.5]
   [0.5 1.1 1.0]
   [0.8 1.5 1.2]
   [0.7 1.1 0.7]
   [1.1 1.8 1.4]
   [0.4 1.0 1.1]
   [1.5 1.5 1.1]
   [1.4 0.7 1.7]
   [1.1 0.8 1.0]
   [0.8 0.7 1.4]
   [1.6 1.6 1.7]
   [1.2 1.5 1.2]
   [1.0 1.4 1.3]
   [1.0 2.0 1.2]
   [1.5 1.5 1.6]
   [0.9 1.2 1.2]
   [1.0 0.9 1.1]
   [1.1 1.6 0.8]
   [1.4 1.6 1.5]
   [1.6 1.4 1.3]
   [0.8 0.8 1.2]
   [1.3 1.3 1.2]
   [1.5 1.6 1.6]
   [1.6 1.5 1.1]
   [1.6 1.2 1.3]
   [1.1 1.2 0.9]
   [1.0 1.9 1.3]
   [0.8 1.3 1.1]
   [0.9 1.2 1.2]
   [0.7 0.7 1.2]
   [0.6 1.4 0.6]
   [1.3 1.7 0.9]
   [1.4 1.6 1.2]
   [1.1 1.0 1.2]
   [1.1 1.0 1.5]
   [1.7 1.4 1.1]
   [0.6 1.4 0.9]
   [0.9 1.3 0.6]
   [1.4 0.6 1.4]
   [1.3 0.8 0.9]
   [0.9 1.6 1.2]
   [1.3 0.8 1.7]
   [1.2 0.8 1.0]
   [1.3 1.0 1.1]
   [0.9 1.2 1.2]
   [1.6 0.9 1.1]
   [0.9 0.5 1.0]
   [0.6 1.2 0.8]
   [0.8 0.5 1.3]
   [1.0 1.8 1.4]
   [0.6 1.3 0.9]
   [1.3 0.8 1.5]
   [1.6 1.5 1.6]
   [1.2 1.6 1.3]
   [1.3 1.1 1.2]
   [1.1 0.9 1.1]
   [1.7 1.4 1.3]
   [1.5 1.2 1.3]
   [1.6 1.1 1.2]
   [1.1 0.5 1.1]
   [1.2 1.5 1.1]
   [0.8 1.7 1.2]]
# ---
